[gd_scene load_steps=12 format=3 uid="uid://dhbx748ct8awa"]

[ext_resource type="Script" path="res://ui/tabs/tab_messages/tab_messages.gd" id="1_kklqb"]
[ext_resource type="PackedScene" uid="uid://6pq2k4jg8hbv" path="res://ui/tabs/tab_messages/panel_dice/tab_messages_panel_dice.tscn" id="2_e88ub"]
[ext_resource type="PackedScene" uid="uid://dw4t2g37sotcj" path="res://ui/tabs/tab_messages/panel_history/tab_messages_panel_history.tscn" id="3_e3rt8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5qn83"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0.219608, 0.239216, 0.266667, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cs0lv"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0.12549, 0.156863, 0.192157, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_17m7u"]
content_margin_left = 4.0
content_margin_right = 4.0
draw_center = false
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="ButtonGroup" id="ButtonGroup_6y5qp"]
allow_unpress = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8jh3g"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 5.0
bg_color = Color(0, 0, 0, 0.901961)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7xcjj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tf2dh"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0

[sub_resource type="ButtonGroup" id="ButtonGroup_udd2s"]

[node name="TabMessages" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_kklqb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="DiceButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_5qn83")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cs0lv")
theme_override_styles/normal = SubResource("StyleBoxFlat_17m7u")
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_6y5qp")
text = "Dice"

[node name="HistoryButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_5qn83")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cs0lv")
theme_override_styles/normal = SubResource("StyleBoxFlat_17m7u")
toggle_mode = true
button_group = SubResource("ButtonGroup_6y5qp")
text = "History"

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="HelperContainer" type="VBoxContainer" parent="VBoxContainer/VSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dice" parent="VBoxContainer/VSplitContainer/HelperContainer" instance=ExtResource("2_e88ub")]
unique_name_in_owner = true
layout_mode = 2

[node name="History" parent="VBoxContainer/VSplitContainer/HelperContainer" instance=ExtResource("3_e3rt8")]
unique_name_in_owner = true
layout_mode = 2

[node name="History" type="PanelContainer" parent="VBoxContainer/VSplitContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_8jh3g")

[node name="HBoxContainer2" type="VBoxContainer" parent="VBoxContainer/VSplitContainer/History"]
layout_mode = 2

[node name="OutputText" type="RichTextLabel" parent="VBoxContainer/VSplitContainer/History/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
theme_override_colors/table_border = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_7xcjj")
theme_override_styles/normal = SubResource("StyleBoxEmpty_tf2dh")
scroll_following = true
context_menu_enabled = true
threaded = true
selection_enabled = true
deselect_on_focus_loss_enabled = false

[node name="HBoxContainer" type="BoxContainer" parent="VBoxContainer/VSplitContainer/History/HBoxContainer2"]
layout_mode = 2
alignment = 1
vertical = true

[node name="MessageLineEdit" type="LineEdit" parent="VBoxContainer/VSplitContainer/History/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
placeholder_text = ">"

[node name="HelperButtons" type="BoxContainer" parent="VBoxContainer/VSplitContainer/History/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="AsPlayerButton" type="Button" parent="VBoxContainer/VSplitContainer/History/HBoxContainer2/HBoxContainer/HelperButtons"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_5qn83")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cs0lv")
theme_override_styles/normal = SubResource("StyleBoxFlat_17m7u")
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_udd2s")
text = "Player"

[node name="AsSelectionButton" type="Button" parent="VBoxContainer/VSplitContainer/History/HBoxContainer2/HBoxContainer/HelperButtons"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_5qn83")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cs0lv")
theme_override_styles/normal = SubResource("StyleBoxFlat_17m7u")
toggle_mode = true
button_group = SubResource("ButtonGroup_udd2s")
text = "Selection"

[node name="SendMessageButton" type="Button" parent="VBoxContainer/VSplitContainer/History/HBoxContainer2/HBoxContainer/HelperButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_5qn83")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cs0lv")
theme_override_styles/normal = SubResource("StyleBoxFlat_17m7u")
text = "Send"

[editable path="VBoxContainer/VSplitContainer/HelperContainer/History"]
